# treeleaf

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md  config.json  justfile  tree.json
dialogue/: Cargo.toml
dialogue/src/: binary_tree.rs  lib.rs
dialogue/tests/: lib.rs
examples/: treeroot.rs
src/: binary_tree.rs  lib.rs  main.rs  term_tree.rs  tests.rs
tests/: lib.rs
